--- a/views/article.ejs
+++ b/views/article.ejs
@@ -15,8 +15,8 @@
             <div class="post-content"><%- post.post %></div>
             <div class="post-footer">
                 <a href="/Study" class="post-room btn btn-primary"><%= post.room %></a>
-                <span class="post-comment">0 comment</span>
-            </div>
+                <a class="post-comment">comment</a>
+            </div>              
         </div>
         <div class="post-time">
             <div class="post-time-day"><%= post.time.day %></div>
@@ -24,6 +24,33 @@
             <div class="post-time-year"><%= post.time.year %></div>
         </div>
     </div>   
+    <div class="comment">
+        <div id="disqus_thread"></div>
+            <script>
+            /**
+            * RECOMMENDED CONFIGURATION VARIABLES: 
+            EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+            * LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: 
+            https://disqus.com/admin/universalcode/#configuration-variables
+            */
+
+            /*
+            var disqus_config = function () {
+            this.page.url = PAGE_URL; // Replace PAGE_URL with your page's canonical URL variable
+            this.page.identifier = PAGE_IDENTIFIER; 
+            // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+            };
+            */
+                (function() { // DON'T EDIT BELOW THIS LINE
+                    var d = document, s = d.createElement('script');
+
+                    s.src = '//syleestu.disqus.com/embed.js';
+                    s.setAttribute('data-timestamp', +new Date());
+                    (d.head || d.body).appendChild(s);
+                })();
+             </script>
+             <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
+          </div>      
 </div>
 
 <%- include footer.ejs %>
