--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -14,9 +14,7 @@
             </select>
         </div>
         <div class="form-group">
-            <textarea class="form-control postArticle" rows="12" name="post" placeholder="Add Your Post Content Here">
-                <%- post.post %>
-            </textarea>
+            <textarea class="form-control postArticle" rows="12" name="post" placeholder="Add Your Post Content Here"><%- post.post %></textarea>
         </div>
         <div>
             <button type="submit" class="btn btn-success">Submit</button>
