--- a/views/header.ejs
+++ b/views/header.ejs
@@ -11,7 +11,8 @@
     <link rel="icon" href="/images/icon.ico">
     <link rel="stylesheet" href="/stylesheets/bootstrap.css">
     <link rel="stylesheet" href="/stylesheets/bootstrap-theme.css">
-    <link rel="stylesheet" href='/stylesheets/main.css'>
+    <link rel="stylesheet" href="/stylesheets/main.css">
+    <link rel="stylesheet" href="/stylesheets/spinkit.css">
   </head>
   <body>
       <div class="modal fade" id="login" role="login" tabindex="-1">
@@ -25,7 +26,7 @@
                   <div class="modal-body">
                       <form method="POST" action="/login">
                           <div class="form-group">
-                              <input type="text" name="name" class="form-control" placeholder="请输入账号">
+                              <input id="log-account" type="text" name="name" class="form-control" placeholder="请输入账号" data-toggle="tooltip" data-placement="right">
                           </div>
                           <div class="form-group">
                               <input type="password" name="password" class="form-control" placeholder="请输入密码">
@@ -50,7 +51,7 @@
                   <div class="modal-body">
                       <form method="POST" action="/register">
                           <div class="form-group">
-                              <input type="text" name="name" class="form-control" placeholder="请输入账号">
+                              <input id="reg-account" type="text" name="name" class="form-control" placeholder="请输入账号" data-toggle="tooltip" data-placement="right">
                           </div>
                           <div class="form-group">
                               <input type="password" name="password" class="form-control" placeholder="请输入密码">
@@ -92,7 +93,6 @@
                               <% } else { %>
                               <li><a href="/logout">登出</a></li>
                               <% } %>
-                              <li><a id="hide-user" href="#" >隐藏用户栏</a></li>
                           </ul>
                       </li>
                       <li><a href="/">Home</a></li>
@@ -145,10 +145,8 @@
           <div class="flash-condition alert alert-danger"><%= error %></div>
           <% } %>
       </div>
-      <span id="show-users" class="glyphicon glyphicon-collapse-down"></span>
       <div id="user">
           
-          <span id="user-hide" class="glyphicon glyphicon-collapse-up"></span>
           <div class="avatar">
               <img src="/images/avatar.jpg" alt="avatar">
           </div>
@@ -162,7 +160,7 @@
               <span class="line"></span>
               <ul class="user-icon">
                   <li class="user-passage">
-                      <p><%= posts.length %></p>
+                      <p>??</p>
                       <span class="glyphicon glyphicon-file"></span>
                   </li>
                   <li class="user-location">
@@ -176,7 +174,9 @@
               </ul>
           </div>
           <ul id="nav">
+              <% if (user) { %>
               <li><a href="/post">Post</a></li>
+              <% } %>
               <li><a href="/archive">Archive</a></li>
               <li><a href="/starred">Starred</a></li>
               <li><a href="/about">About</a></li>
