--- a/views/archive.ejs
+++ b/views/archive.ejs
@@ -1,6 +1,6 @@
 <%- include header.ejs %>
 
-<div id="mainContent">
+<div id="main-content">
     <% posts.forEach(function(post, index) { %>
     <div class="archive-container">
         <span class="archive-time"><time><%= post.time.minute %></time></span>
