--- a/public/sass/partial/_module.scss
+++ b/public/sass/partial/_module.scss
@@ -45,7 +45,7 @@
     }
 }
 /*-----------Title Module-------------------------*/
-.nowPage {
+.now-page {
     position: relative;
     height: 50px;
 }
@@ -64,7 +64,7 @@
     }
 }
 .flash-condition {right: 10%;}
-.locatePage {
+.locate-page {
     position: absolute;;
     left: 40%;
     & > p {
@@ -77,7 +77,7 @@
     }
 }
 @media (max-width: 768px) {
-    .locatePage {
+    .locate-page {
         left: 5%;
         & > p {
             font-size: 24px;
@@ -88,11 +88,24 @@
     }
 }
 @media (max-width: 768px) {  //小于768px的屏幕
-    .isLogin {
+    .is-login {
         display: none;
     }
 }
 /*-----------User Module-------------------------*/
+@media (min-width: 768px) {#user-avatar {display: none;}}
+#user-avatar {
+    position: absolute;
+    left: 80%;
+    width: 40px;
+    height: 40px;
+    border: 1px solid $borderColor;
+    border-radius: 50%;
+    & img {
+        width: 100%;
+        border-radius: 50%;
+    }
+}
 #user {
     float: left;
     width: 20%;
@@ -101,6 +114,8 @@
     background-color: #fff; 
     border: 1px solid $borderColor;
     border-radius: 10px;
+    overflow: hidden;
+    transition: all 1s ease-in-out; 
     & > span {
         float: right;
         font-size: 16px;
@@ -149,7 +164,7 @@
         font-size: 20px;
     }
 }
-#nav {
+#user-nav {
     margin: 0;
     padding: 0;
     & > li {
@@ -211,18 +226,18 @@
     }
 }
 /*-----------Content Module-------------------------*/
-#mainContent {
+#main-content {
     width: 90%;
     margin: auto;
     min-height: 500px;
-    padding-top: 50px;
+    padding-top: 30px;
     margin-top: 10px;
     background-color: #fff;
     border: 1px solid $borderColor;
     border-radius: 10px;
 }
 @media (min-width: 768px) { //大于768px的屏幕
-    #mainContent {
+    #main-content {
         float: left;
         width: 50%;
         margin-left: 10%;
@@ -231,22 +246,25 @@
 /*--------------Post Module-------------------------*/
 .post {
     position: relative;
-    top: -50px;
+    top: -30px;
     width: 100%;
     height: auto;
-    margin-bottom: 60px;
+    margin-bottom: 50px;
+    padding-bottom: 20px;
     font-family: 'Microsoft Yahei';
+    box-shadow: 0 1px 5px rgba(0, 0, 0, 0.075);
     overflow: hidden;
 }
 .comment {
     width: 80%;
     margin: auto;
+    margin-bottom: 30px;
 }
 .post-bar {
     position: absolute;
     left: 0;
     width: 6px;
-    height: 300px;
+    height: 100%;
     background-color: #f0ad4e;
 }
 .post:first-child > .post-bar {
@@ -257,36 +275,34 @@
     margin: auto;
     & > .post-title {
         font-size: 24px;
-        margin-bottom: 20px;
         color: #222;
+        & a:first-child {margin-left: 10px;}
         & a {
-            margin-top: 10px;
-            padding: 3px 12px;
+            padding: 3px;
+            font-size: 12px;
+            color: rgba(0, 0, 0, 0.5);
+            &:hover {
+                text-decoration: none;
+                color: #4078c0;
+            }
         }
     }
     & > .post-content {
+        padding: 30px 0;
         font-size: 18px;
-        margin-top: 30px;
-        margin-bottom: 30px;
-        text-indent: 5px;
+        text-indent: 8px;
     }
     & > .post-footer {
         width: 80%;
         height: 50px;
-        border-top: 1px dashed #000;
+        border-top: 1px dashed #222;
         & > .post-room {
-            display: inline-block;
+            float: left;
             margin-top: 10px;
             padding: 5px 10px;
             color: #fff;
         }
-        & > .post-comment {
-            display: inline-block;
-            float: right;
-            margin-top: 15px;
-            color: #222;
-        }
-    }
+    }//inset 0 1px 0 rgba(255, 255, 255, 0.15), 0 1px 5px rgba(0, 0, 0, 0.075)
 }
 .post-time {
     position: absolute;
@@ -297,12 +313,92 @@
     color: #fff;
     background-color: #222;
     text-align: center;
+    font-family: Consolas, "Liberation Mono", Menlo, Courier, monospace;
 }
-/*-----------Post/Edit Module-------------------------*/
-#postHolder {
+/*-----------Post、Edit Module-------------------------*/
+#edit-holder, #post-holder {
     width: 80%;
     margin: auto;
 }
+.edit-header, .post-header {
+    border: solid 1px #ccc;
+    border-radius: 4px;
+    border-bottom-left-radius: 0;
+    border-bottom-right-radius: 0;
+    background-color: #f7f7f7;
+    & > li > a {
+        border-top: none;
+        font: 13px / 1.4 Helvetica, arial, nimbussansl, liberationsans, freesans, clean, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+        color: #666;
+        &:hover {
+            background-color: #f7f7f7;
+            border-color: #f7f7f7;
+        }
+    }
+    & > li:first-child.active > a {
+        border-left: none;
+        &:hover {border-left: none;}
+    }
+    & > li.active > a {
+        border-bottom: solid 1px #fff;
+        border-left: solid 1px #ccc;
+        border-right: solid 1px #ccc;
+        border-top: none; 
+        &:hover, &:focus {
+            border-bottom: solid 1px #fff;
+            border-right: solid 1px #ccc;
+            border-top: none; 
+        }
+    }
+    &::before {
+        display: table;
+        content: "";
+    }
+    &::after {
+        display: table;
+        content: "";
+        clear: both;
+    }
+    /*& > .edit-header-info {
+        float: left;
+        font-size: 12px;
+        font-family: Consolas, "Liberation Mono", Menlo, Courier, monospace;
+    }*/
+    & > .edit-header-actions, .post-header-actions {
+        float: right;
+        line-height: 39px;
+        & > span {
+            margin-right: 8px;
+            color: #767676;
+        }
+        & > span:hover {
+            color: #4078c0;
+        }
+    }
+}
+.edit-content, .post-content {
+    & > textarea {
+        box-shadow: none;
+        border-top: none;
+        border-top-left-radius: 0;
+        border-top-right-radius: 0;
+        &:focus {
+            box-shadow: none;
+            border-color: #ccc;
+        }
+    }
+}
+#preview {
+    padding: 6px 12px;
+    height: 253px;
+    background-color: #fff;
+    border: solid 1px #ccc;
+    border-top: none;
+    border-bottom-left-radius: 4px;
+    border-bottom-right-radius: 4px;
+    overflow-y: scroll;
+}
+img[alt="markdown"] {width: 300px;}
 /*--------------Archive Module-------------------------*/
 .archive-container {
     width: 80%;
@@ -320,24 +416,25 @@
     margin-top: 20px;
     color: $footerColor;
     clear: left;
-    & > #backTop {
+    & > #back-top {
         position: fixed;
         right: 3%;
         bottom: 5%;
         width: 50px;
         height: 50px;
-        background-color: #b2b2b2;
+        background-color: #222;
         color: #fff;
         font-family: "Microsoft Yahei";
         font-size: 14px;
         text-align: center;
         cursor: pointer;
-        transition: background-color, .4s, ease-in;
+        opacity: .3;
+        transition: opacity, .4s, ease-in;
         & > p {
             margin-bottom: 5px;
         }
         &:hover {
-            background-color: $headColor;
+            opacity: 1;
         }
     }
 }
