--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -1,12 +1,12 @@
 <%- include header.ejs %>
 
-<div id="mainContent">
-    <form id="postHolder" action="/edit/<%= post._id %>" method="POST">
+<div id="main-content">
+    <form id="edit-holder" action="/edit/<%= post._id %>" method="POST">
         <div class="form-group">
-            <input type="text" name="title" class="form-control postTitle" value="<%= post.title %>" placeholder="Add Your Post Title Here" disabled>
+            <input type="text" name="title" class="form-control edit-title" value="<%= post.title %>" placeholder="Add Your Post Title Here" disabled>
         </div>
         <div class="form-group">
-            <select name="room" class="form-control postRoom" disabled>
+            <select name="room" class="form-control edit-room" disabled>
                 <option value="Study">Study</option>
                 <option value="Kitchen">Kitchen</option>
                 <option value="Living">Living</option>
@@ -14,12 +14,35 @@
             </select>
         </div>
         <div class="form-group">
-            <textarea class="form-control postArticle" rows="12" name="post" placeholder="Add Your Post Content Here"><%- post.post %></textarea>
+            <ul class="nav nav-tabs edit-header" role="tablist">
+                <li class="active" role="presentation">
+                    <a href="#edit" role="tab" data-toggle="tab">
+                        <span class="glyphicon glyphicon-pencil"></span>&nbsp;&nbsp;Edit this Article
+                    </a>
+                </li>
+                <li role="presentation">
+                    <a id="edit-preview" href="#preview" role="tab" data-toggle="tab">
+                        <span class="glyphicon glyphicon-eye-open"></span>&nbsp;&nbsp;Preview changes
+                    </a>
+                </li>
+                <div class="edit-header-actions">
+                    <span id="upload-img" data-toggle="tooltip" data-original-title="上传图片" class="glyphicon glyphicon-picture"></span>
+                </div>
+            </ul>
+            <div class="edit-content tab-content">
+                <textarea id="edit" class="form-control tab-pane active" rows="12" name="post" placeholder="Add Your Post Content Here"><%- post.post %></textarea>
+                <div id="preview" class="tab-pane"></div>
+            </div>
         </div>
         <div>
             <button type="submit" class="btn btn-success">Submit</button>
             <button type="reset" class="btn btn-default">Reset</button>
         </div>
     </form>
+    <form id="upload" action="/upload" enctype="multipart/form-data" method="POST" target="frameFile" style="display: none">
+        <input type="file" id="choose-img" multiple name="img">
+        <input type="submit" id="submit-img">
+    </form>
+    <iframe id='frameFile' name='frameFile' style='display: none;'></iframe>
 </div>
 <%- include footer.ejs %>
