--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -1,6 +1,6 @@
     <div id="footer">
         <p>&#64;Proudly Presented By A Silly Man</p>
-        <div id="backTop"><p>返回</p><p>顶部</p></div>
+        <div id="back-top" style="display: none;"><p>返回</p><p>顶部</p></div>
     </div>
     <script src="/js/jquery-2.1.4.min.js"></script>
     <script src="/js/bootstrap.js"></script>
