--- a/views/header.ejs
+++ b/views/header.ejs
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <meta name="description" content="ShinyLee's Personal Blog">
     <meta name="author" content="ShinyLee">
-    <meta name="keyword" content="Cuisine ShinyLee blog cooking chinese cooking">   
+    <meta name="keyword" content="ShinyLee blog">   
     <title>Shiny's Blog </title>
     <link rel="icon" href="/images/icon.ico">
     <link rel="stylesheet" href="/stylesheets/bootstrap.css">
@@ -15,59 +15,7 @@
     <link rel="stylesheet" href="/stylesheets/spinkit.css">
   </head>
   <body>
-      <div class="modal fade" id="login" role="login" tabindex="-1">
-          <div class="modal-dialog">
-              <div class="modal-content">
-                  <div class="modal-header">
-                      <a type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;
-                      </a>
-                      <a href="#">登录</a>
-                  </div>
-                  <div class="modal-body">
-                      <form method="POST" action="/login">
-                          <div class="form-group">
-                              <input id="log-account" type="text" name="name" class="form-control" placeholder="请输入账号" data-toggle="tooltip" data-placement="right">
-                          </div>
-                          <div class="form-group">
-                              <input type="password" name="password" class="form-control" placeholder="请输入密码">
-                          </div>
-                          <div class="modal-footer">
-                              <input type="submit" name="login" class="btn btn-primary" value="登录"></input>
-                          </div>
-                      </form>
-                  </div>
-                  
-              </div>
-          </div>
-      </div>
-      <div class="modal fade" id="register" role="register" tabindex="-1">
-          <div class="modal-dialog">
-              <div class="modal-content">
-                  <div class="modal-header">
-                      <a type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;
-                      </a>
-                      <a href="#">注册</a>
-                  </div>
-                  <div class="modal-body">
-                      <form method="POST" action="/register">
-                          <div class="form-group">
-                              <input id="reg-account" type="text" name="name" class="form-control" placeholder="请输入账号" data-toggle="tooltip" data-placement="right">
-                          </div>
-                          <div class="form-group">
-                              <input type="password" name="password" class="form-control" placeholder="请输入密码">
-                          </div>
-                           <div class="form-group">
-                              <input type="email" name="email" class="form-control" placeholder="请输入邮箱">
-                          </div>
-                          <div class="modal-footer">
-                              <input type="submit" name="login" class="btn btn-primary" value="注册"></input>
-                          </div>
-                      </form>
-                  </div>
-                  
-              </div>
-          </div>
-      </div>
+      <%- include modal.ejs %>
       <nav id="header" class="navbar navbar-default navbar-fixed-top" role="navigation">
           <div class="container-fluid">
                <div class="navbar-header">
@@ -87,9 +35,9 @@
                           <a class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" href="#"><span class="glyphicon glyphicon-user"></span>
                           </a>
                           <ul class="dropdown-menu">
-                              <li><a class="activeReg" href="#">注册</a></li>
+                              <li><a class="active-reg" href="#">注册</a></li>
                               <% if(!user) { %> 
-                              <li><a class="activeLogin" href="#">登录</a></li>
+                              <li><a class="active-login" href="#">登录</a></li>
                               <% } else { %>
                               <li><a href="/logout">登出</a></li>
                               <% } %>
@@ -133,8 +81,8 @@
       </nav>
          
       
-      <div class="nowPage">
-          <div class="locatePage">
+      <div class="now-page">
+          <div class="locate-page">
              <p><%= page %></p>
              <span class="line"></span>
           </div>
@@ -144,9 +92,20 @@
           <% if (error) { %>
           <div class="flash-condition alert alert-danger"><%= error %></div>
           <% } %>
+          <div id="user-avatar">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                  <img src="/images/avatar.jpg" alt="avatar">
+              </a>
+              <ul class="dropdown-menu" aria-labelledby="dLabel">
+                  <li><a href="/post">Post</a></li>
+                  <li><a href="/archive">Archive</a></li>
+                  <li><a href="#">Starred</a></li>
+                  <li><a href="/about">About</a></li>
+              </ul>
+          </div>
       </div>
+      
       <div id="user">
-          
           <div class="avatar">
               <img src="/images/avatar.jpg" alt="avatar">
           </div>
@@ -160,7 +119,7 @@
               <span class="line"></span>
               <ul class="user-icon">
                   <li class="user-passage">
-                      <p>??</p>
+                      <p>0</p>
                       <span class="glyphicon glyphicon-file"></span>
                   </li>
                   <li class="user-location">
@@ -173,12 +132,12 @@
                   </li>
               </ul>
           </div>
-          <ul id="nav">
+          <ul id="user-nav">
               <% if (user) { %>
               <li><a href="/post">Post</a></li>
               <% } %>
               <li><a href="/archive">Archive</a></li>
-              <li><a href="/starred">Starred</a></li>
+              <li><a href="#">Starred</a></li>
               <li><a href="/about">About</a></li>
           </ul>
       </div>
