--- a/public/sass/partial/_module.scss
+++ b/public/sass/partial/_module.scss
@@ -151,6 +151,7 @@
         margin: auto;
         width: 160px;
     }
+    & .user-like { cursor: pointer; }
 }
 .user-icon {
     margin: 20px 0;
@@ -243,6 +244,11 @@
         margin-left: 10%;
     }
 }
+#pager {
+    padding: 0 30px;
+    margin-top: -30px;
+    margin-bottom: 30px;
+}
 /*--------------Post Module-------------------------*/
 .post {
     position: relative;
@@ -285,6 +291,12 @@
                 text-decoration: none;
                 color: #4078c0;
             }
+        }
+        & span {
+            color: darkred;
+            font-size: 16px;
+            text-indent: 20px;
+            cursor: pointer;
         }
     }
     & > .post-content {
@@ -404,11 +416,22 @@ img[alt="markdown"] {width: 300px;}
     width: 80%;
     margin: auto;
     font-family: Georgia, 'Times New Roman', Times, serif;
+    & > .archive-time { font-family: 'Lucida Console', Monaco, monospace;}
+    & > .archive-title { 
+        font-family: 'Microsoft Yahei';
+        margin-left: 10px;
+    }
     & a {
         color: darkslategray;
     }
 }
 
+/*-----------About Module-------------------------*/
+#intro {
+    font-family: cursive;
+    text-align: center;
+    line-height: 250px;
+}
 
 /*-----------Footer Module-------------------------*/
 #footer {
@@ -443,3 +466,64 @@ img[alt="markdown"] {width: 300px;}
         margin-top: 5px;
     }
 }
+
+.sk-cube-grid {
+  width: 40px;
+  height: 40px;
+  margin: 40px auto;
+  /*
+   * Spinner positions
+   * 1 2 3
+   * 4 5 6
+   * 7 8 9
+   */ }
+  .sk-cube-grid .sk-cube {
+    width: 33.33%;
+    height: 33.33%;
+    background-color: #639;
+    float: left;
+    -webkit-animation: sk-cubeGridScaleDelay 1.3s infinite ease-in-out;
+            animation: sk-cubeGridScaleDelay 1.3s infinite ease-in-out; }
+  .sk-cube-grid .sk-cube1 {
+    -webkit-animation-delay: 0.2s;
+            animation-delay: 0.2s; }
+  .sk-cube-grid .sk-cube2 {
+    -webkit-animation-delay: 0.3s;
+            animation-delay: 0.3s; }
+  .sk-cube-grid .sk-cube3 {
+    -webkit-animation-delay: 0.4s;
+            animation-delay: 0.4s; }
+  .sk-cube-grid .sk-cube4 {
+    -webkit-animation-delay: 0.1s;
+            animation-delay: 0.1s; }
+  .sk-cube-grid .sk-cube5 {
+    -webkit-animation-delay: 0.2s;
+            animation-delay: 0.2s; }
+  .sk-cube-grid .sk-cube6 {
+    -webkit-animation-delay: 0.3s;
+            animation-delay: 0.3s; }
+  .sk-cube-grid .sk-cube7 {
+    -webkit-animation-delay: 0.0s;
+            animation-delay: 0.0s; }
+  .sk-cube-grid .sk-cube8 {
+    -webkit-animation-delay: 0.1s;
+            animation-delay: 0.1s; }
+  .sk-cube-grid .sk-cube9 {
+    -webkit-animation-delay: 0.2s;
+            animation-delay: 0.2s; }
+
+@-webkit-keyframes sk-cubeGridScaleDelay {
+  0%, 70%, 100% {
+    -webkit-transform: scale3D(1, 1, 1);
+            transform: scale3D(1, 1, 1); }
+  35% {
+    -webkit-transform: scale3D(0, 0, 1);
+            transform: scale3D(0, 0, 1); } }
+
+@keyframes sk-cubeGridScaleDelay {
+  0%, 70%, 100% {
+    -webkit-transform: scale3D(1, 1, 1);
+            transform: scale3D(1, 1, 1); }
+  35% {
+    -webkit-transform: scale3D(0, 0, 1);
+            transform: scale3D(0, 0, 1); } }
