--- a/views/article.ejs
+++ b/views/article.ejs
@@ -8,9 +8,9 @@
                 <h2>
                     <%= post.title %>
                     <% if(user) { %>
-                    <a data-toggle="tooltip" title="收藏"><i class="glyphicon glyphicon-star"></i></a>
+                    <a id="post-star" href="#" data-toggle="tooltip" title="收藏"><i class="glyphicon glyphicon-star-empty"></i></a>
                     <a href="/edit/<%= post._id %>/" data-toggle="tooltip" title="编辑"><i class="glyphicon glyphicon-pencil"></i></a>
-                    <a href="/delete/<%= post._id %>" data-toggle="tooltip" title="删除"><i class="glyphicon glyphicon-trash"></i></a>
+                    <a id="post-remove" href="/delete/<%= post._id %>" data-toggle="tooltip" title="删除"><i class="glyphicon glyphicon-trash"></i></a>
                     <% } %>
                 </h2>
 
