--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -2,8 +2,8 @@
         <p>&#64;Proudly Presented By A Silly Man</p>
         <div id="back-top" style="display: none;"><p>返回</p><p>顶部</p></div>
     </div>
-    <script src="/js/jquery-2.1.4.min.js"></script>
-    <script src="/js/bootstrap.js"></script>
+    <script src="//cdn.bootcss.com/jquery/2.1.4/jquery.min.js"></script>
+    <script src="//cdn.bootcss.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
     <script src="/javascripts/main.js"></script>
   </body>
 </html>
