--- a/views/modal.ejs
+++ b/views/modal.ejs
@@ -43,7 +43,7 @@
                               <input type="email" name="email" class="form-control" placeholder="请输入邮箱">
                           </div>
                           <div class="modal-footer">
-                              <input type="submit" name="login" class="btn btn-primary" value="注册"></input>
+                              <input type="submit" name="login" class="btn btn-primary" value="注册" disabled></input>
                           </div>
                       </form>
                   </div>
