--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,7 +1,7 @@
 <%- include header.ejs %>
 
 <div id="main-content">
-    
+    <h3 id="intro">Nothing BUT A Blank Page</h3>
 </div>
 
 <%- include footer.ejs %>
