--- a/views/header.ejs
+++ b/views/header.ejs
@@ -9,10 +9,9 @@
     <meta name="keyword" content="ShinyLee blog">   
     <title>Shiny's Blog </title>
     <link rel="icon" href="/images/icon.ico">
-    <link rel="stylesheet" href="/stylesheets/bootstrap.css">
-    <link rel="stylesheet" href="/stylesheets/bootstrap-theme.css">
-    <link rel="stylesheet" href="/stylesheets/main.css">
-    <link rel="stylesheet" href="/stylesheets/spinkit.css">
+    <link href="//cdn.bootcss.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
+    <link href="/stylesheets/bootstrap-theme.css" rel="stylesheet">
+    <link href="/stylesheets/main.css" rel="stylesheet">
   </head>
   <body>
       <%- include modal.ejs %>
@@ -22,7 +21,7 @@
                   <div class="navbar-brand">
                       <a href="/"><span>S</span>hiny's Blog</a>
                   </div>
-                  <button type="button" class="navbar-toggle collapsed" data-toggle="collapses" data-target="#nav-room" aria-expanded="false">
+                  <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#nav-room" aria-expanded="false">
                       <span class="sr-only">Toggle navigation</span>
                       <span class="icon-bar"></span>
                       <span class="icon-bar"></span>
@@ -32,12 +31,13 @@
               <div class="collapse navbar-collapse" id="nav-room" >
                   <ul class="nav navbar-nav">
                       <li>
-                          <a class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" href="#"><span class="glyphicon glyphicon-user"></span>
+                          <a class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" href="#">
+                              <span class="glyphicon glyphicon-cog"></span>
                           </a>
                           <ul class="dropdown-menu">
-                              <li><a class="active-reg" href="#">注册</a></li>
+                              
                               <% if(!user) { %> 
-                              <li><a class="active-login" href="#">登录</a></li>
+                              <li><a class="active-login" href="#">后台管理</a></li>
                               <% } else { %>
                               <li><a href="/logout">登出</a></li>
                               <% } %>
@@ -71,7 +71,7 @@
                               <li><a href="/yard">Yard</a></li>
                           </ul>
                       </li>
-                      <li><a href="#">Contact</a></li>
+                      <li><a href="https://github.com/ShinyLeee" target="_blank">Contact</a></li>
                   </ul>
                   <form action="/search" method="GET" class="search" >
                       <input type="text" name="keyword" placeholder="Search">
@@ -80,7 +80,6 @@
           </div>
       </nav>
          
-      
       <div class="now-page">
           <div class="locate-page">
              <p><%= page %></p>
@@ -99,7 +98,7 @@
               <ul class="dropdown-menu" aria-labelledby="dLabel">
                   <li><a href="/post">Post</a></li>
                   <li><a href="/archive">Archive</a></li>
-                  <li><a href="#">Starred</a></li>
+                  <li><a href="/star">Starred</a></li>
                   <li><a href="/about">About</a></li>
               </ul>
           </div>
@@ -110,12 +109,7 @@
               <img src="/images/avatar.jpg" alt="avatar">
           </div>
           <div class="info">
-              <% if(!user) { %>
               <span>ShinyLee</span>
-              <% } %>
-              <% if(user) { %>
-              <a href="/user/<%= user.name %>"><%= user.name %></a>
-              <% } %>
               <span class="line"></span>
               <ul class="user-icon">
                   <li class="user-passage">
@@ -126,9 +120,9 @@
                       <p>宁波</p>
                       <span class="glyphicon glyphicon-map-marker"></span>
                   </li>
-                  <li class="user-comment">
-                      <p>12</p>
-                      <span class="glyphicon glyphicon-comment"></span>
+                  <li class="user-like">
+                      <p>0</p>
+                      <span id="thumb-like" class="glyphicon glyphicon-heart-empty"></span>
                   </li>
               </ul>
           </div>
@@ -137,7 +131,7 @@
               <li><a href="/post">Post</a></li>
               <% } %>
               <li><a href="/archive">Archive</a></li>
-              <li><a href="#">Starred</a></li>
+              <li><a href="/star">Starred</a></li>
               <li><a href="/about">About</a></li>
           </ul>
       </div>
