--- a/views/post.ejs
+++ b/views/post.ejs
@@ -34,7 +34,7 @@
                 <div id="preview" class="tab-pane"></div>
             </div>
         </div>
-        <div>
+        <div class="post-button">
             <button type="submit" class="btn btn-success">Submit</button>
             <button type="reset" class="btn btn-default">Reset</button>
         </div>
